syntax = "proto3";
package bff;

import "bff/bcommon.proto";

option go_package = "bff/;bffpb";
enum ChatType {
  CHAT_WORLD = 0; //世界聊天
  CHAT_PLAYER = 1; //私聊
  CHAT_TEAM = 2; //组队聊天
}

//聊天信息
message ChatInfo {
  int64 send_uid = 1; //发送方id
  int64 receive_uid = 2; //接收方id（世界聊天和组队聊天不需要发）
  string content = 3; //文本内容
  string voice_url = 4; //语音url
  float voice_time = 5; //语音条时长
  int32 emoji_id = 6;//表情
}

//聊天信息
message C2SCHATMessage {
  ChatType chat_type = 1; //频道
  ChatInfo chat_info = 2;
}

message S2CCHATMessage {}

// 订阅频道
message C2SSubChannel {
  ChatType chat_type = 1; //频道
}

message S2CSubChannel {}

//世界聊天信息返回
message S2CCHATReceiveWorldMessage {
  ChatInfo chat_info = 1;
  PlayerSimpleInfo send_player = 2; //发送者信息
}

//组队聊天信息返回
message S2CCHATReceiveTeamMessage {
  ChatInfo chat_info = 1;
  PlayerSimpleInfo send_player = 2; //发送者信息
}

//单人聊天信息返回
message S2CCHATReceivePlayerMessage {
  ChatInfo chat_info = 1;
  PlayerSimpleInfo send_player = 2; //发送者信息
}

//--------------------------------------------------------------聊天表情相关-------------------------------------//

//获取拥有的表情
message C2SChatGetEmoji{

}

//返回拥有的表情
message S2CChatGetEmoji{
  repeated int32 emoji_id = 1;//已解锁的表情ID
}
